updated text color

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,12 +12,45 @@
     <title>Bootstrap RULES</title>
   </head>
    <title>Contact</title>
+
+   <!-- Styles -->	
+<style>
+    body {
+      background-image: url("/pix/samples/bg1.gif");
+      background-position: 50% 50%;
+      background-repeat: repeat;
+    }
+    </style>
 </head>
 
 <body>
    <!-- As a heading -->
   <nav class="navbar navbar-light bg-light">
-    <span class="navbar-brand mb-0 h1">Contact</span>
+    <span class="navbar-brand mb-0 h1" style="background-color: teal; color: white;">Ainsley Rodriguez</span>
   </nav>
+
+<!--Placeholders-->
+  <div class="card" style="width: 20rem;">
+    <h3 class="card-title"><span style="color:teal">Portfolio</span></h3>
+     <img src= "http://placehold.it/350"="card-img-top">
+       <div class="card-body"></div>
+         <ul class="list-group list-group-flush"></ul>
+    <img src= "http://placehold.it/350"="card-img-top">
+       <div class="card-body"></div>
+         <ul class="list-group list-group-flush"></ul>      
+    <img src= "http://placehold.it/350"="card-img-top">
+       <div class="card-body"></div>
+         <ul class="list-group list-group-flush"></ul>
+    <img src= "http://placehold.it/350"="card-img-top">
+       <div class="card-body"></div>
+         <ul class="list-group list-group-flush"></ul>
+    <img src= "http://placehold.it/350"="card-img-top">
+       <div class="card-body"></div>
+         <ul class="list-group list-group-flush"></ul>
+  </div>
+
+  <footer>
+      
+  </footer>
 </body>
 </html>
