added css page, chnaged colors and added footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86">
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />    
+    <link rel="Stylesheet" href="./Asset/style.css">
     <title>Bootstrap RULES</title>
   </head>
    <title>Contact</title>
@@ -49,8 +50,15 @@
          <ul class="list-group list-group-flush"></ul>
   </div>
 
-  <footer>
-      
+  <!-- Footer -->
+   <footer class="page-footer font-small blue">
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3" style="color: white;"></span>© 2020 Copyright: Ainsley Rodriguez
+    </div>
+    <!-- Copyright -->
+  
   </footer>
+  <!-- Footer -->
 </body>
 </html>
