updated nav bar and created links to pages

--- a/index.html
+++ b/index.html
@@ -9,15 +9,52 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />    
+    <link rel="Stylesheet" href="./Asset/style.css">
     <title>Bootstrap RULES</title>
   </head>
    <title>Contact</title>
 </head>
 
 <body>
-   <!-- As a heading -->
-  <nav class="navbar navbar-light bg-light">
-    <span class="navbar-brand mb-0 h1">Contact</span>
+   <!-- Nav Bar -->
+   <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Ainsley Rodriguez</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link active" href="./index.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="./contact.html">Contact</a>
+        <a class="nav-link" href="./portfolio.html">Portfolio</a>
+      </div>
+    </div>
   </nav>
+  <!--Nav Bar-->
+<!--About Me-->
+  <div class="container">
+      <div class="row">
+      <div class="col-md-8 rounded bg-info p-5 mt-5 ml-3 md-5">
+        <div class="row">
+          <h1>About Me</h1>
+      </div>
+      <div class="row"></div>
+        <div class="col-sm-12 pr-0 pl-0"></div>
+           <img class="image-responsive" src="http://placehold.it/150" style="width: 150;">
+           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem distinctio temporibus saepe, rerum dolor impedit, sapiente corrupti eligendi qui aliquam numquam totam voluptatum, veritatis voluptatem suscipit. Quod rerum illo dolores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga est impedit delectus. Quasi, ducimus esse officia aliquam debitis sit obcaecati iure sapiente cumque magni illum voluptatem recusandae totam voluptatum repellendus. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum magnam voluptatibus et fuga magni natus, quo obcaecati molestiae perferendis ipsa architecto quaerat earum atque officiis nihil minima, corporis quis esse?</p>
+      </div>
+      </div>
+      </div>
+
+<!-- Footer -->
+  <footer class="page-footer font-small blue">
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3" style="color: white;"></span>© 2020 Copyright: Ainsley Rodriguez
+    </div>
+    <!-- Copyright -->
+  
+  </footer>
+  <!-- Footer -->
 </body>
 </html>
