--- a/portfolio.html
+++ b/portfolio.html
@@ -10,25 +10,28 @@
       crossorigin="anonymous"
     />    
     <link rel="Stylesheet" href="./Asset/style.css">
+
     <title>Bootstrap RULES</title>
   </head>
    <title>Contact</title>
 
-   <!-- Styles -->	
-<style>
-    body {
-      background-image: url("/pix/samples/bg1.gif");
-      background-position: 50% 50%;
-      background-repeat: repeat;
-    }
-    </style>
 </head>
 
 <body>
    <!-- As a heading -->
-  <nav class="navbar navbar-light bg-light">
-    <span class="navbar-brand mb-0 h1" style="background-color: teal; color: white;">Ainsley Rodriguez</span>
-  </nav>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Ainsley Rodriguez</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-link active" href="./index.html">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-link" href="./contact.html">Contact</a>
+      <a class="nav-link" href="./portfolio.html">Portfolio</a>
+    </div>
+  </div>
+</nav>
 
 <!--Placeholders-->
   <div class="card" style="width: 20rem;">
