--- a/contact.html
+++ b/contact.html
@@ -4,74 +4,77 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
-      crossorigin="anonymous"
+        rel="stylesheet"
+        href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+        crossorigin="anonymous"
     />    
     <link rel="Stylesheet" href="./Asset/style.css">
     <title>Bootstrap RULES</title>
-  </head>
-   <title>Contact</title>
+</head>
+<title>Contact</title>
 </head>
 
 <body>
-   <!-- As a heading -->
-   <!-- As a heading -->
-   <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<!--Nav Bar-->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Ainsley Rodriguez</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+    <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
+    <div class="navbar-nav">
         <a class="nav-link active" href="./index.html">Home <span class="sr-only">(current)</span></a>
         <a class="nav-link" href="./contact.html">Contact</a>
         <a class="nav-link" href="./portfolio.html">Portfolio</a>
-      </div>
     </div>
-  </nav>
-  
+    </div>
+</nav>
+<!--Nav Bar End-->  
 
-  <div class="card" style="width: 40rem;">
+<!--Contact-->
+<div class="container">
+<div class="card" style="width: 40rem;">
     <div class="card-body">
         <form>
             <div class="form-group row">
-              <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
-              <div class="col-sm-10">
-                <input type="email" class="form-control" id="inputEmail3">
-              </div>
+                <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+                    <div class="col-sm-10">
+                        <input type="email" class="form-control" id="inputEmail3">
+                    </div>
             </div>
             <div class="form-group row">
-              <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
-              <div class="col-sm-10">
-                <input type="password" class="form-control" id="inputPassword3">
-              </div>
+                <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+                    <div class="col-sm-10">
+                        <input type="password" class="form-control" id="inputPassword3">
+                    </div>
             </div>
             <div class="form-group row">
                 <label for="inputMessage3" class="col-sm-2 col-form-label">Message</label>
-                <div class="col-sm-10">
-                  <input type="Message" class="form-control" id="inputMessage3">
+                    <div class="col-lg-10">
+                        <input type="Message" class="form-control" id="inputMessage3">
                 </div>
-              </div>
+            </div>
             <fieldset class="form-group">
                 <button type="submit" class="btn btn-primary">Sign in</button>
-              </div>
             </div>
-            
-          </form>
-    </div>
-  </div>
+        </div>   
+    </form>
+</div>
+</div>
+</div>  
+<!--Contact End-->  
 
-  <!-- Footer -->
-  <footer class="page-footer font-small blue">
+<!-- Footer -->
+<footer class="footer mt-auto py-3">
+    <div class="container">
 
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-3" style="color: white;"></span>© 2020 Copyright: Ainsley Rodriguez
-    </div>
-    <!-- Copyright -->
-  
-  </footer>
-  <!-- Footer -->
+<!-- Copyright -->
+<span class="text-muted">© 2020 Copyright: Ainsley Rodriguez</span>
+</div>
+<!-- Copyright -->
+
+</footer>
+<!-- Footer End-->
 </body>
 </html>
