--- a/portfolio.html
+++ b/portfolio.html
@@ -4,64 +4,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86">
     <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
-      crossorigin="anonymous"
+    rel="stylesheet"
+        href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+        crossorigin="anonymous"
     />    
     <link rel="Stylesheet" href="./Asset/style.css">
 
     <title>Bootstrap RULES</title>
-  </head>
-   <title>Contact</title>
+</head>
+<title>Portfolio</title>
 
 </head>
 
 <body>
-   <!-- As a heading -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Ainsley Rodriguez</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+<!--Nav Bar-->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Ainsley Rodriguez</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-link active" href="./index.html">Home <span class="sr-only">(current)</span></a>
-      <a class="nav-link" href="./contact.html">Contact</a>
-      <a class="nav-link" href="./portfolio.html">Portfolio</a>
+        <a class="nav-link active" href="./index.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="./contact.html">Contact</a>
+        <a class="nav-link" href="./portfolio.html">Portfolio</a>
     </div>
-  </div>
+    </div>
 </nav>
+<!--Nav Bar End-->
 
 <!--Placeholders-->
-  <div class="card" style="width: 20rem;">
+<div class="card" style="width: 20rem;">
     <h3 class="card-title"><span style="color:teal">Portfolio</span></h3>
-     <img src= "http://placehold.it/350"="card-img-top">
-       <div class="card-body"></div>
-         <ul class="list-group list-group-flush"></ul>
-    <img src= "http://placehold.it/350"="card-img-top">
-       <div class="card-body"></div>
-         <ul class="list-group list-group-flush"></ul>      
-    <img src= "http://placehold.it/350"="card-img-top">
-       <div class="card-body"></div>
-         <ul class="list-group list-group-flush"></ul>
-    <img src= "http://placehold.it/350"="card-img-top">
-       <div class="card-body"></div>
-         <ul class="list-group list-group-flush"></ul>
-    <img src= "http://placehold.it/350"="card-img-top">
-       <div class="card-body"></div>
-         <ul class="list-group list-group-flush"></ul>
-  </div>
+        <img src= "http://placehold.it/350"="card-img-top">
+            <div class="card-body"></div>
+                <ul class="list-group list-group-flush"></ul>
+        <img src= "http://placehold.it/350"="card-img-top">
+            <div class="card-body"></div>
+                <ul class="list-group list-group-flush"></ul>      
+        <img src= "http://placehold.it/350"="card-img-top">
+            <div class="card-body"></div>
+                <ul class="list-group list-group-flush"></ul>
+        <img src= "http://placehold.it/350"="card-img-top">
+            <div class="card-body"></div>
+                <ul class="list-group list-group-flush"></ul>
+        <img src= "http://placehold.it/350"="card-img-top">
+            <div class="card-body"></div>
+                <ul class="list-group list-group-flush"></ul>
+</div>
+<!--Placeholder End-->
 
-  <!-- Footer -->
-   <footer class="page-footer font-small blue">
+<!-- Footer -->
+<footer class="footer mt-auto py-3">
+    <div class="container">
 
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-3" style="color: white;"></span>© 2020 Copyright: Ainsley Rodriguez
-    </div>
-    <!-- Copyright -->
-  
-  </footer>
-  <!-- Footer -->
+<!-- Copyright -->
+<span class="text-muted">© 2020 Copyright: Ainsley Rodriguez</span>
+</div>
+<!-- Copyright -->
+
+</footer>
+<!-- Footer End-->
 </body>
 </html>
