--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,16 @@
     <link rel="Stylesheet" href="./Asset/style.css">
 
     <title>Bootstrap RULES</title>
+    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
+    <style>
+        nav {
+            font-family: 'Architects Daughter', cursive;
+        }
+        .card-title {
+            font-family: 'Architects Daughter', cursive;
+        }
+    </style>
+
 </head>
 <title>Portfolio</title>
 
