--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <fieldset class="form-group">
-                <button type="submit" class="btn btn-primary">Sign in</button>
+                <button type="submit" class="btn btn-info">Sign in</button>
             </div>
         </div>   
     </form>
