--- a/index.html
+++ b/index.html
@@ -46,12 +46,13 @@
     <div class="row">
         <div class="col-md-8 rounded bg-info p-5 mt-5 ml-3 md-5">
         <div class="row">
-            <h1>About Me</h1>
+            <h1 style="color:tan">About Me</h1>
         </div>
     <div class="row"></div>
         <div class="col-sm-12 pr-0 pl-0"></div>
             <img class="image-responsive float-left w-50" src="http://placehold.it/150" style="width: 150;">
-            <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem distinctio temporibus saepe, rerum dolor impedit, sapiente corrupti eligendi qui aliquam numquam totam voluptatum, veritatis voluptatem suscipit. Quod rerum illo dolores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga est impedit delectus. Quasi, ducimus esse officia aliquam debitis sit obcaecati iure sapiente cumque magni illum voluptatem recusandae totam voluptatum repellendus. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum magnam voluptatibus et fuga magni natus, quo obcaecati molestiae perferendis ipsa architecto quaerat earum atque officiis nihil minima, corporis quis esse? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero id ipsa, ab, molestiae ratione et modi error praesentium expedita, suscipit consequatur ducimus vitae fuga architecto exercitationem rerum hic nisi! Vitae.</p>
+            <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem distinctio temporibus saepe, rerum dolor impedit, sapiente corrupti eligendi qui aliquam numquam totam voluptatum, veritatis voluptatem suscipit. Quod rerum illo dolores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga est impedit delectus. Quasi, ducimus esse officia aliquam debitis sit obcaecati iure sapiente cumque magni illum voluptatem recusandae totam voluptatum repellendus. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum magnam voluptatibus et fuga magni natus, quo obcaecati molestiae perferendis ipsa architecto quaerat earum atque officiis nihil minima, corporis quis esse? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero id ipsa, ab, molestiae ratione et modi error praesentium expedita, suscipit.</p>
+            <a href="https://www.linkedin.com/in/ainsley-j-rodriguez-41862983/">Linkedin</a>
     </div>
         </div>
 </div>
