--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,7 @@
 </div>
 <!--Placeholder End-->
 
-<!-- Footer -->
+<!-- Fixed Footer -->
 <footer class="footer mt-auto py-3">
     <div class="container">
 
@@ -75,6 +75,6 @@
 <!-- Copyright -->
 
 </footer>
-<!-- Footer End-->
+<!--Fixed Footer End-->
 </body>
 </html>
